removed unmodifiable list reference because the server has an old version of java